--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
   <head>
-    <title><%= content_for(:title) || "Rails 8 Template" %></title>
+    <title><%= content_for(:title) || "Fridge Scanner App" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -17,12 +17,48 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
+    <%# PicoCSS from CDN %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="container-fluid">
+      <ul>
+        <li><strong>Fridge Scanner</strong></li>
+      </ul>
+      <% if user_signed_in? %>
+        <ul>
+          <li><%= link_to "My Fridge", items_path %></li>
+          <li><%= link_to "Add Item", new_item_path %></li>
+          <li><%= link_to "Recipes", recipes_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %></li>
+        </ul>
+      <% else %>
+        <ul>
+          <li><%= link_to "Sign In", new_user_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        </ul>
+      <% end %>
+    </nav>
+
+    <main class="container">
+      <% if notice.present? %>
+        <article><%= notice %></article>
+      <% end %>
+
+      <% if alert.present? %>
+        <article style="background-color: var(--pico-del-color);"><%= alert %></article>
+      <% end %>
+
+      <%= yield %>
+    </main>
+
+    <footer class="container">
+      <small>Fridge Scanner App &copy; <%= Time.current.year %></small>
+    </footer>
   </body>
 </html>
